--- a/TODO
+++ b/TODO
@@ -6,6 +6,6 @@ link-window / linkw
 
 cowsay+fortune trick
 
-Combine alias and dsecription column
+Combine alias and dsecription column (done)
 
-Organize targets into server, session window and pane
+Organize targets into server, session window and pane (done)
