--- a/TODO
+++ b/TODO
@@ -9,3 +9,7 @@ cowsay+fortune trick
 Combine alias and dsecription column (done)
 
 Organize targets into server, session window and pane (done)
+
+Command Prompt dialogs
+
+Tables
