add TODO information

--- a/TODO
+++ b/TODO
@@ -27,5 +27,7 @@ New sections:
 - Examples added to formats section, as well as removing table of formats in favor of cheatsheet in the back
 - Chapter summaries
 - Ran through a professional editor
+- Rename "Status bar" section to "Status bar and styling",
+  add more styling information.
 
 Detailed examples for formats and targets
