--- a/TODO
+++ b/TODO
@@ -29,5 +29,6 @@ New sections:
 - Ran through a professional editor
 - Rename "Status bar" section to "Status bar and styling",
   add more styling information.
+- Fill up the content in "Shell command output" section with tmux-mem-cpu-load example.
 
 Detailed examples for formats and targets
